- v.5.6.1 (2021-07-01)
    - Fixed the return value of process.
    - Improved message table handling.
    - Don't change the case of name when renaming it in TreeView.
- v.5.6.2 (2021-08-15)
    - Enlarged width of "Save Options" and "Export Options" dialogs.
    - Added workaround to add message tables on Microsoft compatible mode.
- v.5.6.3 (2021-12-12)
    - Added win32-samples.
    - Added "UI Lanuage Select".
- v.5.6.4 (2021-12-16)
    - Asking for compiling before opening GUI edit.
- v.5.6.5 (2021-12-18)
    - A BS_OWNERDRAW button is a PUSHBUTTON.
    - Added "Copy to multiple languages" feature.
    - Fixed the bug of the RAD window (Critical).
- v.5.6.6 (2021-12-25)
    - Double-clicking the RAD window opens the control/dialog properties.
    - Improved ANI cursor support.
- v.5.6.7 (2022-01-13)
    - Added Portuguese translation.
    - WinXP support again (don't use GetThreadUILanguage() in XP).
- v.5.6.8 (2022-01-17)
    - Changed the initial focus of IDD_CTRLPROP.
    - Fixed some version info.
- v.5.6.9 (2022-03-09)
    - Splited the history text.
    - Renamed READMEs.
    - Added WS_CLIPCHILDREN for RAD window to reduce flickering.
- v.5.7.0 (2022-03-18)
    - Fixed recompilation in management of resource IDs.
- v.5.7.1 (2022-03-28)
    - Improved version info dialog.
    - Backed to a flickering method due to wrong control display.
    - Remembered main window focus.
- v.5.7.2 (2022-06-07)
    - Supported TOOLBAR resources.
- v.5.7.3 (2023-04-01)
    - Minor performance improvements.
    - Improved "Copy to multiple languages".
    - Fixed FILESUBTYPE of VERSIONINFO.
    - Made "~" the backup suffix rather than "-old".
    - Renamed "Replacing Dialog Fonts..." as "Dialog font substitutes..."
- v.5.7.4 (2023-04-02)
    - Added version numbers to IDS_NOTICE.
    - Improved EGA console.
    - Fixed half-broken installer.
- v.5.7.5 (2023-XX-YY)
    - Improved IDD_DLGPROP, IDD_CTRLPROP, IDD_ADDCTRL dialogs.
    - Added Korean installer.