@@ -287,3 +287,4 @@
 - v.5.7.5 (2023-XX-YY)
     - IDD_DLGPROP, IDD_CTRLPROP, IDD_ADDCTRL 대화 상자가 개선되었습니다.
     - Added Korean installer.
+    - Fixed MENUEX separator.
