@@ -286,3 +286,4 @@
 - v.5.7.5 (2023-XX-YY)
     - Improved IDD_DLGPROP, IDD_CTRLPROP, IDD_ADDCTRL dialogs.
     - Added Korean installer.
+    - Fixed MENUEX separator.
